# MusicStoreManagement

./: .gitignore  .gitmodules  imgui.CMakeLists.txt  readme.md  temp.ps1
source/: CMakeLists.txt  main.cpp  music_repository.cpp  temp.ps1
source/src/: main.cpp
source/src/add_new_item/: add_item_screen.cpp  add_item_screen.h
source/src/all_items/: show_all_items_screen.cpp  show_all_items_screen.h
source/src/find/: find_music_screen.cpp
source/src/item_in_stock/: ItemInStockScreen.cpp  ItemInStockScreen.h  item_in_stock_screen.cpp  item_in_stock_screen.h
source/src/music_store/: helper.h  music_item.h  music_repository.cpp  music_repository.h
source/src/ui/add_new_item/: add_item_screen.cpp  add_item_screen.h
source/src/ui/all_items/: show_all_items_screen.cpp  show_all_items_screen.h
source/src/ui/connect_db/: connect_db_screen.cpp  connect_db_screen.h
source/src/ui/core/: screen.h
source/src/ui/find/: find_music_screen.cpp  find_music_screen.h
source/src/ui/home/: home_screen.h
source/src/ui/item_in_stock/: item_in_stock_screen.cpp  item_in_stock_screen.h
source/src/ui/order_item/: order_item_screen.cpp  order_item_screen.h
source/widget/: button.cpp  button.h  export.h  home_screen.cpp  home_screen.h  widget.cpp  widget.h
